--- a/app/components/ButtonSmall/buttonSmall.module.scss
+++ b/app/components/ButtonSmall/buttonSmall.module.scss
@@ -1,11 +1,17 @@
 .button {
-    // height: auto;
-    // width: auto;
     border-radius: 0px;
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     padding: 1rem 1.5rem;
     cursor: pointer;
+    text-align: center;
+    box-shadow: 0px 0px 15px 0px rgba(143, 143, 143, 0.75);
+}
+.button:hover{
+    box-shadow: 0px 0px 5px 0px rgba(254, 254, 254, 0.75);
+}
+.button:active {
+    box-shadow: 0px 0px 5px 0px rgba(255, 255, 255, 0.75);
 }
 
 @media only screen and (max-width: 56.25rem){
