--- a/app/components/TemplateCar/templateCar.module.scss
+++ b/app/components/TemplateCar/templateCar.module.scss
@@ -6,6 +6,8 @@
     background: rgb(255, 255, 255);
     margin: 1rem;
     margin-top: 0rem;
+    border: 1px rgba(226, 226, 226, 0.786) solid;
+    box-shadow: 0px 0px 5px 0px rgba(230, 230, 230, 0.75);
 }
 .contImgDescription{
     display: flex;
