update json data

--- a/app/components/BannerSmall/bannerSmall.module.scss
+++ b/app/components/BannerSmall/bannerSmall.module.scss
@@ -28,6 +28,9 @@
     margin-bottom: 1rem;
     text-align: left;
 }
+.contTextBannerSmall h4{
+    text-transform: uppercase;
+}
 @media only screen and (max-width: 56.25rem){
     .bannerSmall{
         font-size: .9rem;
