--- a/app/product/[category]/description/[id]/stylesDescription.module.scss
+++ b/app/product/[category]/description/[id]/stylesDescription.module.scss
@@ -23,11 +23,12 @@
 }
 
 .contTextBannerSmall h1{
-    
     font-size: 1.5rem;
     font-weight: 700;
     margin-bottom: 1rem;
-    // text-align: left;
+}
+.contTextBannerSmall h4{
+    text-transform: uppercase;
 }
 
 @media only screen and (max-width: 56.25rem){
