--- a/app/components/Banner/banner.module.scss
+++ b/app/components/Banner/banner.module.scss
@@ -34,7 +34,7 @@
 
 @media only screen and (max-width: 56.25rem){
    .section{
-    font-size: .9rem;
+    font-size: 1rem;
     margin: 5rem 0rem
    }
     .contImg{
@@ -43,7 +43,7 @@
    }
    .contText{
      height: 45%;
-     padding-bottom: 4rem;
+     padding-bottom: 5rem;
      margin: 0rem 1rem;
     }
 }
@@ -51,7 +51,7 @@
     .section{
         height: 30vh;
         width: 100%;
-        font-size: .7rem;
+        font-size: .9rem;
     }
     .contBanner{
         height: 40vh;
