--- a/app/components/ButtonSmall/buttonSmall.module.scss
+++ b/app/components/ButtonSmall/buttonSmall.module.scss
@@ -22,7 +22,8 @@
 }
 @media only screen and (max-width: 37.5rem){
     .button {
-        padding: .3rem .8rem;
-        font-size: .7rem;
+        padding: .7rem 1.2rem;
+        font-size: .9rem;
     }
+    
 }
