--- a/app/product/[category]/description/[id]/stylesDescription.module.scss
+++ b/app/product/[category]/description/[id]/stylesDescription.module.scss
@@ -34,7 +34,7 @@
 @media only screen and (max-width: 56.25rem){
     .contDescription{
         flex-direction: column;
-        font-size: .9rem;
+        font-size: 1rem;
         justify-content: flex-start;
     }
     .contBannerSmallImg {
@@ -48,7 +48,7 @@
 }
 @media only screen and (max-width: 35.5rem){
     .contDescription{
-        font-size: .7rem;
+        font-size: .9rem;
     }
     .contBannerSmallImg {
         width: 90%;
