--- a/app/components/BannerSmall/bannerSmall.module.scss
+++ b/app/components/BannerSmall/bannerSmall.module.scss
@@ -26,7 +26,7 @@
     font-size: 1.5rem;
     font-weight: 700;
     margin-bottom: 1rem;
-    text-align: left;
+    text-align: right;
 }
 .contTextBannerSmall h4{
     text-transform: uppercase;
@@ -41,10 +41,10 @@
 
 @media only screen and (max-width: 37.5rem){
 .bannerSmall{
-    height: 12rem;
+    height: 15rem;
     font-size: .7rem;
 }
 .contBannerSmallImg{
-    width: 60%;
+    width: 70%;
 }
 }
