--- a/app/components/Card/card.module.scss
+++ b/app/components/Card/card.module.scss
@@ -1,16 +1,13 @@
 .card{
     margin: 1rem 2rem;
-    border-bottom-left-radius: 1rem;
-    border-bottom-right-radius: 1rem;
-    box-shadow: 0 0 5px rgba(182, 182, 182, 0.5);
+    // background: red;
 }
 .imgCard{
-    height: 20rem;
-    width: 20rem;
+    height: 22rem;
+    width: 100%;
 }
 .descriptionCard{
-    border-bottom-left-radius: 1rem;
-    border-bottom-right-radius: 1rem;
+    height: 10rem;
     background: rgb(235, 235, 235);
     padding: 2rem 1.5rem 0rem 1.5rem;
     text-align: start;
@@ -50,16 +47,16 @@
 @media only screen and (max-width: 56.25rem){
     .card{
         margin: .5rem 1rem;
-        border-bottom-left-radius: .5rem;
-        border-bottom-right-radius: .5rem;    
+        // border-bottom-left-radius: .5rem;
+        // border-bottom-right-radius: .5rem;    
     }
     .imgCard{
         height: 16rem;
         width: 19rem;
     }
     .descriptionCard{
-        border-bottom-left-radius: .5rem;
-        border-bottom-right-radius: .5rem;
+        // border-bottom-left-radius: .5rem;
+        // border-bottom-right-radius: .5rem;
         padding: .7rem;
     }
     .descriptionCard h1{
