--- a/app/components/ListProductCart/styles.module.scss
+++ b/app/components/ListProductCart/styles.module.scss
@@ -3,17 +3,15 @@
     height: 90vh;
     padding: 2rem;
     padding-top: 15rem;
-    // background: red;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
     align-items: center;
 }
 .contTemplate {
-  // background-color: green;
     height: 95rem;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .contTemplate::-webkit-scrollbar {
