--- a/app/components/Nav/nav.module.scss
+++ b/app/components/Nav/nav.module.scss
@@ -3,31 +3,28 @@
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
-    height: 8rem;
+    height: 10rem;
     width: 100%;
     background: #000000;
     color: rgb(255, 255, 255);
     position: fixed;
     z-index:20;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-    
+}
+
+.totalItemCart{
+    background: rgb(51, 87, 187);
+    border-radius: 50%;
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 800;
+    width: 1.8rem;
+    height: 1.8rem;
 }
 .contLogo{
     margin: 0 5rem;
     cursor: pointer;
 }
-// .contList ul {
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-between;
-//     flex-direction: row;
-//     list-style: none;
-//     margin-left: 17rem;
-// }
-// .contList li {
-//     padding: 0 1rem;
-//     cursor: pointer;
-// }
 .contTools{
     display: flex;
     align-items: center;
