--- a/app/components/ListProductCart/styles.module.scss
+++ b/app/components/ListProductCart/styles.module.scss
@@ -1,12 +1,14 @@
 
 .contCarDetail{
-    height: 90vh;
+    height: 75vh;
     padding: 2rem;
-    padding-top: 15rem;
+    margin-top: 14rem;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
+    background-color: rgb(236, 236, 236);
     align-items: center;
+    width: 60rem;
 }
 .contTemplate {
     height: 95rem;
@@ -25,6 +27,8 @@
   
   .contTemplate::-webkit-scrollbar-track {
     background-color: #F1F1F1;
+
+    // background-color: #6b6b6b;
   }
   .contTotal{
     padding-top: 2.5rem;
