--- a/app/components/PrincipalBanner/principalBanner.module.scss
+++ b/app/components/PrincipalBanner/principalBanner.module.scss
@@ -2,10 +2,16 @@
     position: relative;
     width: auto;
     height: 75vh;
-
+    padding-top: 8rem;
+    margin-bottom: 8rem;
 }
 .contBannerImg {
+    max-width: 100%;
+    margin: 0 auto;
     position: relative;
+    background-size: auto;
+    height: 75vh;
     width: 100%;
-    height: 100%;
+    object-fit: cover;
+    filter: brightness(0.7);
 }
