--- a/app/components/ProductTableAdmin/style.module.scss
+++ b/app/components/ProductTableAdmin/style.module.scss
@@ -60,3 +60,12 @@
     width: 80%;
     margin: 1rem;
 }
+
+.controlHeadTablesUser {
+    padding: 5rem 0rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: 80%;
+    
+}
