--- a/app/components/Nav/nav.module.scss
+++ b/app/components/Nav/nav.module.scss
@@ -28,36 +28,43 @@
 .contTools{
     display: flex;
     align-items: center;
-    margin: 0 2rem;
+    margin: 0 4rem;
 }
 .contCart{
-    padding: 0 3rem;
+    padding: 0 0rem;
     cursor: pointer;
 }
-
-.searchInput {
-  width: 18rem;
-  height: 2.5rem;
-  border: 1px solid rgb(204, 204, 204);
-  border-radius: 5px;
-  font-size: 16px;
-  font-weight: 400;
-  outline: none;
-  background-color: #fff;
-
-  &::placeholder {
-    padding-left: 1rem;
-    color: rgb(133, 133, 133);
-  }
-}
-
-.searchIcon{
-    margin-left: .5rem;
-    color: rgb(1, 1, 1);
+.login {
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin-right: 1rem;
+    color: #e4e3e3;
     cursor: pointer;
+    background: rgba(184, 184, 184, 0.247);
+    padding: .7rem 2.2rem;
+    margin-right: 5rem;
+    border-radius: 5rem;
 }
 
-@media only screen and (max-width: 56.25rem){
+.contDataUser{
+    text-align: center;
+    width: 30rem;
+    display: flex;
+    align-items: center;
+    // justify-content: space-evenly
+}
+
+.contUser {
+display: flex;
+flex-direction: column;
+align-items: center;
+    text-align: center;
+    // padding-left: 1rem;
+
+}
+
+
+@media only screen and (max-width: 62.25rem){
     .contNav{
         height: auto;
         background: rgb(0, 0, 0);
@@ -86,7 +93,7 @@
 
 @media only screen and (max-width: 37.5rem){
     .contLogo{
-        margin: .5rem .55rem;
+        margin: .0rem .0rem;
         cursor: pointer;
         align-items: flex-end;
     }
@@ -94,10 +101,11 @@
         height: auto;
         background: rgb(0, 0, 0);
         // flex-direction: column;
-        justify-content: space-between;
+        justify-content:center;
+        // padding-right: 0.5rem;
     }
     .contCart{
-        // padding-right: 0.5rem;
+    justify-content: center;
     }
     .searchInput {
         width: 8rem;
@@ -106,5 +114,12 @@
             font-size: .8rem;
             padding-left: .5rem;
         }
+    }
+    .contDataUser{
+    width: auto;
+    }
+    .contLogOut{
+        width: 5rem;
+        // margin: 0rem .5rem;
     }
 }
