--- a/app/components/UI/ButtonSmall/buttonSmall.module.scss
+++ b/app/components/UI/ButtonSmall/buttonSmall.module.scss
@@ -1,5 +1,6 @@
 .button {
     border-radius: 0px;
+    width: 100%;
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     padding: 1rem 1.5rem;
