--- a/app/admin/create/styles.module.scss
+++ b/app/admin/create/styles.module.scss
@@ -1,8 +1,9 @@
-.contTypeRegister {
+.createForm{
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%
 }
 @media only screen and (max-width: 64rem){
     .createForm{
