--- a/app/components/Filters/filters.module.scss
+++ b/app/components/Filters/filters.module.scss
@@ -1,62 +1,17 @@
 .contFilters {
-    width: 30rem;
+    width: 25rem;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     height: 100vh;
     background: rgb(222, 221, 221);
-    padding: 2rem;
+    padding: 1.5rem;
 }
-
-.select {
-    width: 100%;
-    height: 40px;
-    // padding: 0 10px;
-    border: 1px solid #e0e0e0;
-    border-radius: 5px;
-    background-color: #fff;
-    font-size: 16px;
-    cursor: pointer;
-  
-    &:focus {
-      outline: none;
-      border-color: #000;
-    }
-  }
-.contCheckBox{
-    padding-bottom: 2rem;
-
+.inputMax{
+  margin: 1rem;
 }
-  .filters {
-    & .checkbox {
-      width: 20px;
-      height: 20px;
-      margin: 0 5px;
-      margin: .5rem;;
-      border: 1px solid #ccc;
-      border-radius: 55px; 
-      cursor: pointer;
-   
-    &:checked {
-        background-color: rgb(0, 255, 47);
-        border-color: rgb(255, 221, 0);
-      }
-    }
-  
-    & .checkbox label {
-      font-size: 19px;
-      font-weight: 800;
-      color: #000;
-    }
-  }
-  
-  .inputMax{
-    padding-top: 2rem;
-  }
-
-  .inputMaxStyle {
-    
+  .inputStyle {
     width: 100%;
     height: 40px;
     border: 1px solid rgb(204, 204, 204);
@@ -66,37 +21,26 @@
     outline: none;
     background-color: #fff;
     &::placeholder {
-      margin: 0 1rem;
-      padding-left: 1rem;
+      padding-left: .5rem;
       color: rgb(127, 127, 127);
     }
   }
 
   .contSearch{
+    margin: 1rem;
+    position: relative;
+    width: auto;
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
     align-items: center;
   }
-
-  .searchInput {
-    width: 18rem;
-    height: 2.5rem;
-    border: 1px solid rgb(204, 204, 204);
-    border-radius: 5px;
-    font-size: 16px;
-    font-weight: 400;
-    outline: none;
-    background-color: #fff;
-  
-    &::placeholder {
-      padding-left: 1rem;
-      color: rgb(133, 133, 133);
-    }
+  .contSearch img {
+    position: absolute;
+    right: 0;
   }
   
   .searchIcon{
-      margin-left: .5rem;
-      color: rgb(1, 1, 1);
+  padding: .2rem;
       cursor: pointer;
   }
 
@@ -108,15 +52,12 @@
   @media only screen and (max-width: 56.25rem){
     .contFilters{
       padding: 1rem;
-      padding-top: 6.5rem;
+      padding-top: 7rem;
       flex-direction: row;
       width: 100%;
       height: auto;
       justify-content: space-between;
       align-items: flex-end;
-    }
-    .select {
-      font-size: .9rem;
     }
     .inputMax{
       padding: 0rem;
@@ -128,7 +69,7 @@
 
   @media only screen and (max-width: 37.5rem){
     .contFilters{
-      flex-direction: column-reverse;
+      flex-direction: column;
       align-items: flex-start;
     }
     .select {
