--- a/app/components/UI/ButtonLogout/buttonLogout.module.scss
+++ b/app/components/UI/ButtonLogout/buttonLogout.module.scss
@@ -1,33 +1,25 @@
 .button {
-    border-radius: 1000px;
-    background-color: rgb(38, 100, 235);
-    color: rgb(255, 255, 255);
-    padding: 1rem 1.5rem;
+    padding: 0;
+    margin: 0;
+    color: rgb(220, 35, 35);
     cursor: pointer;
     text-align: center;
-    box-shadow: 0px 0px 15px 0px rgba(143, 143, 143, 0.75);
-}
-.button:hover{
-    box-shadow: 0px 0px 5px 0px rgba(254, 254, 254, 0.75);
-}
-.button:active {
-    box-shadow: 0px 0px 5px 0px rgba(255, 255, 255, 0.75);
+    font-size: 1.2rem;
+    font-weight: 600;
 }
 
 @media only screen and (max-width: 56.25rem){
     .button {
         border-radius: 0px;
         background-color: rgba(255, 255, 255, 0);
-        box-shadow: none;
-        color: rgb(18, 45, 199);
-        padding: .2rem .5rem;
-        font-size: .8rem;
+        font-size: 1rem;
     }
 }
-@media only screen and (max-width: 37.5rem){
+@media only screen and (max-width: 28rem){
     .button {
-        // padding: .5rem .9rem;
-        font-size: .9rem;
+        font-size: .8rem;
+        margin: .5rem;
+        padding: .5rem;
     }
     
 }
