--- a/app/admin/create/styles.module.scss
+++ b/app/admin/create/styles.module.scss
@@ -1,12 +1,12 @@
 .createForm{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     height: 100vh;
     width: 100%
 }
 @media only screen and (max-width: 64rem){
     .createForm{
-        padding-top: 15rem;   
+        // padding-top: 15rem;
     }
 }
