--- a/app/components/ProductTableAdmin/style.module.scss
+++ b/app/components/ProductTableAdmin/style.module.scss
@@ -52,7 +52,7 @@
     margin: 1rem;
 }
 .controlHeadTables{
-    padding-top: 15rem;
+    // padding-top: 15rem;
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
