update crud for admin

--- a/app/components/ProductList/styles.module.scss
+++ b/app/components/ProductList/styles.module.scss
@@ -8,7 +8,7 @@
     padding: 1rem;
     padding-top: 10rem;
     background-color: #ffffff;
-    overflow: scroll;
+    overflow: auto;
 }
 
 @media only screen and (max-width: 37.5rem){
