--- a/app/admin/adminStyle.module.scss
+++ b/app/admin/adminStyle.module.scss
@@ -4,10 +4,18 @@
 }
 
 .contMenuAdmin{
-    margin: 2rem;
+    // margin: 2rem;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 2rem;
+}
+
+@media only screen and (max-width: 64rem){
+
+    .contPanelAdmin{
+        padding-top: 10rem
+    }
+
 }
