--- a/app/components/Card/card.module.scss
+++ b/app/components/Card/card.module.scss
@@ -1,10 +1,9 @@
 .card{
     margin: 1rem 2rem;
-    // background: red;
 }
 .imgCard{
     height: 22rem;
-    width: 100%;
+    width: 20rem;
 }
 .descriptionCard{
     height: 10rem;
