--- a/app/components/Filters/filters.module.scss
+++ b/app/components/Filters/filters.module.scss
@@ -65,6 +65,9 @@
 .button {
   padding: 0rem 4rem;
 }
+.setButton{
+  padding: .5rem 4rem;
+}
 
 @media only screen and (max-width: 56.25rem){
     .contDetail {
