--- a/app/product/[category]/[subCategory]/stylesProduct.module.scss
+++ b/app/product/[category]/[subCategory]/stylesProduct.module.scss
@@ -5,6 +5,20 @@
     flex-direction: row;
     width: 100%;
 }
+.listMenu{
+    width: 16rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    height: 100vh;
+    background: rgb(222, 221, 221);
+    padding: 1.5rem;
+}
+
+.listMenu ul li {
+    text-transform: capitalize;
+}
 
 @media only screen and (max-width: 56.25rem){
     .contDetail {
