update styles form

--- a/app/components/Forms/LoginClient/styles.module.scss
+++ b/app/components/Forms/LoginClient/styles.module.scss
@@ -4,3 +4,11 @@
     align-items: center;
     justify-content: center;
 }
+.widthButton {
+    width: 10rem;
+}
+.alignButton{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
