--- a/app/LoginOrRegister/styles.module.scss
+++ b/app/LoginOrRegister/styles.module.scss
@@ -16,7 +16,7 @@
     justify-content: center;
 }
 .loginGoogle{
-    width: 20rem;
+    width: auto;
     background: rgba(184, 184, 184, 0.247);
     padding: .7rem 1.2rem;
     border-radius: 5rem;
@@ -32,3 +32,25 @@
     padding: 0;
     color: #000;
 }
+
+@media only screen and (max-width: 64rem){
+
+    .iconGoogle{
+        width: 2rem;
+        height: auto;
+    }
+    .loginGoogle p{
+        font-size: 1rem;
+    }
+
+}    
+
+@media only screen and (max-width: 28rem){
+    .iconGoogle{
+        width: 1.5rem;
+        height: auto;
+    }
+    .loginGoogle p{
+        font-size: .9rem;
+    }
+}    
