--- a/app/components/Nav/nav.module.scss
+++ b/app/components/Nav/nav.module.scss
@@ -10,16 +10,18 @@
     position: fixed;
     z-index:20;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+    // position: absolute;
 }
 
 .totalItemCart{
+    // position: relative;
     background: rgb(51, 87, 187);
     border-radius: 50%;
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 800;
-    width: 1.6rem;
-    height: 1.6rem;
+    width: 1.4rem;
+    height: 1.4rem;
 }
 
 .contLogo{
@@ -67,10 +69,7 @@
     margin-left: 0rem;
 }
 .contUser img {
-    // width: 3rem;
-    // height: 3rem;
     border-radius: 50%;
-    // margin-bottom: .5rem;
 }
 .contLinkAdmin{
     font-size: 1.2rem;
@@ -95,7 +94,7 @@
         margin: 0
     }
     .contCart{
-        padding: 0 1rem;
+        padding: 0 .5rem;
     }
     .contLinkAdmin{
         font-size: 1rem;
@@ -109,6 +108,7 @@
 @media only screen and (max-width: 28rem){
     .contNav{
         justify-content:center;
+        height: 4.2rem;
     }
     .contLogo{
         margin: .5rem;
@@ -116,13 +116,13 @@
         align-items: center;
     }
     .login {
-        font-size: .9rem;
+        font-size: .8rem;
         margin-right: 0rem;
-
+        padding: .5rem .7rem;
     }
     .contCart{
-        margin: .5rem;
-        padding: .5rem;
+        margin: .2rem;
+        padding: .2rem;
         justify-content: center;
     }
     .contLinkAdmin{
