--- a/app/components/PrincipalBanner/principalBanner.module.scss
+++ b/app/components/PrincipalBanner/principalBanner.module.scss
@@ -2,7 +2,7 @@
     position: relative;
     width: auto;
     height: 75vh;
-    padding-top: 6rem;
+    padding-top: 8rem;
     margin-bottom: 8rem;
 }
 .contBannerImg {
@@ -14,4 +14,15 @@
     width: 100%;
     object-fit: cover;
     filter: brightness(0.7);
+}
+@media only screen and (max-width: 64rem){
+    .PrincipalBanner{
+        padding-top: 6rem;
+    }
+}
+
+@media only screen and (max-width: 28rem){
+    .PrincipalBanner{
+        padding-top: 4rem;
+    }
 }
