--- a/app/admin/adminStyle.module.scss
+++ b/app/admin/adminStyle.module.scss
@@ -4,12 +4,15 @@
 }
 
 .contMenuAdmin{
-    // margin: 2rem;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 2rem;
+}
+
+.contTableAdmin{
+    overflow: scroll;
 }
 
 @media only screen and (max-width: 64rem){
