--- a/app/components/Nav/nav.module.scss
+++ b/app/components/Nav/nav.module.scss
@@ -88,7 +88,8 @@
         margin-right: .5rem;
     }
     .contLogo{
-        margin: 0 .5rem;
+        padding-left: 1.5rem;
+        margin:0 .5rem;
     }
     .contTools{
         margin: 0
@@ -111,8 +112,8 @@
         height: 4.2rem;
     }
     .contLogo{
-        margin: .5rem;
-        cursor: pointer;
+        padding-left: 0rem;
+        margin:.5rem;
         align-items: center;
     }
     .login {
