--- a/app/components/ProductTableAdmin/style.module.scss
+++ b/app/components/ProductTableAdmin/style.module.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     height: auto;
     padding-top: 0rem;
-    background-color: #ffffff;
+    background-color: #931717;
 }
 .contTable h1{
     font-size: 2rem;
