update mobile app

--- a/app/components/ProductList/styles.module.scss
+++ b/app/components/ProductList/styles.module.scss
@@ -7,6 +7,7 @@
     width: 100%;
     padding: 1rem;
     padding-top: 10rem;
+    margin-bottom: 5rem;
     background-color: #ffffff;
     overflow: auto;
 }
