--- a/app/admin/adminStyle.module.scss
+++ b/app/admin/adminStyle.module.scss
@@ -14,6 +14,9 @@
 .contTableAdmin{
     overflow: scroll;
 }
+.contTableAdmin::-webkit-scrollbar {
+    display: none;  
+}
 
 @media only screen and (max-width: 64rem){
 
