--- a/app/product/[category]/[subCategory]/stylesProduct.module.scss
+++ b/app/product/[category]/[subCategory]/stylesProduct.module.scss
@@ -20,16 +20,17 @@
     text-transform: capitalize;
     padding: .4rem 0rem;
 }
-.listMenu ul li:hover {
+.listMenu ul li a:hover {
     font-weight: 600;
 }
 
-
+  
 @media only screen and (max-width: 56.25rem){
     .contDetail {
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
+        position: fixed;
     }
     .listMenu{
         width: 100%;
@@ -58,6 +59,7 @@
     .listMenu ul li {
         padding: 0rem .5rem;
     }
+    
 }
 
 
