--- a/app/components/Nav/nav.module.scss
+++ b/app/components/Nav/nav.module.scss
@@ -82,14 +82,15 @@
     .contNav{
         height: 6rem;
         background: rgb(0, 0, 0);
+        padding: 0 1rem;
     }
     .login {
         font-size: .9rem;
         margin-right: .5rem;
     }
     .contLogo{
-        padding-left: 1.5rem;
-        margin:0 .5rem;
+        padding: 0rem;
+        margin: 0rem;
     }
     .contTools{
         margin: 0
@@ -108,8 +109,8 @@
 
 @media only screen and (max-width: 28rem){
     .contNav{
-        justify-content:center;
-        height: 4.2rem;
+        height: 4.5rem;
+        padding: 0 .1rem;
     }
     .contLogo{
         padding-left: 0rem;
