--- a/app/components/ProductList/styles.module.scss
+++ b/app/components/ProductList/styles.module.scss
@@ -1,20 +1,32 @@
+.containerCards{
+    height: 100vh;
+    // background-color: #cc1515;
+    overflow: auto;
+    
+}
 .contCards{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: flex-start;
-    height: 100vh;
     width: 100%;
     padding: 1rem;
-    padding-top: 10rem;
+    padding-top: 12rem;
     margin-bottom: 5rem;
-    background-color: #ffffff;
-    overflow: auto;
+    // background-color: #21a826;
+}
+
+@media only screen and (max-width: 64rem){
+    .contCards{
+        padding: .1rem;
+        padding-top: 0rem;
+        padding-bottom: 5rem;
+    }
 }
 
 @media only screen and (max-width: 37.5rem){
     .contCards{
         padding: .1rem;
-        padding-top: 2.5rem;
+        padding-top: 0rem;
     }
 }
