update feedback login

--- a/app/components/Forms/LoginClient/styles.module.scss
+++ b/app/components/Forms/LoginClient/styles.module.scss
@@ -12,3 +12,9 @@
     align-items: center;
     justify-content: center;
 }
+.alert{
+    margin: 1rem;
+    padding: .5rem;
+    color: rgb(215, 22, 22);
+    // background: red;
+  }
