--- a/app/components/Forms/RegisterClient/styles.module.scss
+++ b/app/components/Forms/RegisterClient/styles.module.scss
@@ -46,6 +46,13 @@
     align-items: center;
     justify-content: center;
 }
+
+.alert{
+  margin: 1rem;
+  padding: .5rem;
+  color: rgb(215, 22, 22);
+  // background: red;
+}
   
   @media only screen and (max-width: 64rem){
     .fotoPerfilInput {
