add style admin

--- a/app/LoginOrRegister/styles.module.scss
+++ b/app/LoginOrRegister/styles.module.scss
@@ -1,11 +1,11 @@
 .contLoginOrOrder{
-    // text-align: ;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100%
+    width: 100%;
+    margin-bottom:8rem;
 }
 .contLoginGoogle {
     width: 100%;
