--- a/app/product/[category]/[subCategory]/stylesProduct.module.scss
+++ b/app/product/[category]/[subCategory]/stylesProduct.module.scss
@@ -11,7 +11,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // height: 100vh;
+    height: 100vh;
     padding: 1.5rem;
     z-index: 50;
 }
@@ -36,7 +36,7 @@
         width: 100%;
         display: flex;
         flex-direction: row;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: flex-start;
         height: auto;
         // background: rgb(222, 221, 221);
