update info products

--- a/app/components/Banner/banner.module.scss
+++ b/app/components/Banner/banner.module.scss
@@ -23,11 +23,13 @@
     margin: 5rem;
 }
 .contText h1 {
+    text-transform: capitalize;
     font-size: 1.5rem;
     font-weight: 700;
     margin-bottom: 1rem;
 }
 .contText p {
+    text-transform: capitalize;
     margin-bottom: 1rem;
 }
 
