--- a/app/components/Card/card.module.scss
+++ b/app/components/Card/card.module.scss
@@ -6,6 +6,7 @@
     width: 20rem;
 }
 .descriptionCard{
+    width: 20rem;
     height: 10rem;
     background: rgb(235, 235, 235);
     padding: 2rem 1.5rem 0rem 1.5rem;
@@ -52,6 +53,7 @@
         width: 19rem;
     }
     .descriptionCard{
+        width: 19rem;
         padding: .7rem;
     }
     .descriptionCard h1{
