--- a/app/components/Nav/nav.module.scss
+++ b/app/components/Nav/nav.module.scss
@@ -137,4 +137,8 @@
     .contUser span {
         font-size: .8rem;
     }
+    .contUser img {
+        // border-radius: 50%;
+        height: 2.2rem;
+    }
 }
